XWIKI-6558: Align nicely activity stream events Fixed.

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/container/columns.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/container/columns.css
@@ -29,11 +29,15 @@
    they will collapse as if they didn't exist, which breaks the layout */
 .container-columns .column {
   min-height: 10px;
+  /* Must reset the text alignment, since otherwise it will be inherited as "justify" from the container */
+  /* The i10n value is "start", but also specify "left" for older browsers */
+  text-align: left;
+  text-align: start;
 }
 /* And for IE6, which doesn't understand the min-height */
 * html .container-columns .column {
   height: 10px;
-} 
+}
 
 .container-columns .first-column {
   padding-left: 0;
